--- a/Form.html
+++ b/Form.html
@@ -12,19 +12,6 @@
     <link rel="shortcut-icon" href="http://nss.iitd.ac.in/images/nss.png">
     <!-- Google Fonts Muli -->
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;700&display=swap" rel="stylesheet"> 
-    <style>
-            input{
-                border-radius: 1rem;
-                width: 90%;
-                padding:5px;
-                margin:auto;
-            }
-            #sub{
-                color:white;
-                background-color: #6c63ff;
-                border:none;
-            }
-        </style>
     </head>
     <body>
     <section class="wrapper">
@@ -33,24 +20,38 @@
             <img src="http://nss.iitd.ac.in/images/nss.png" alt="nsslogo" class="img"> 
         </div>   
             <div class="content">
-                <h2 class="subtitle" data-aos="fade-up">Subscribe today</h2>
-                <h1 class="title"  data-aos="fade-up">Never miss an event!</h1>
-                <label for="Name"  data-aos="fade-up" data-aos-delay="100">Name:</label>
-                <input type="text" id="Name" data-aos="fade-up">
-                <label for="Entry no"  data-aos="fade-up" data-aos-delay="100">Entry no:</label>
-                <input type="text" id="Entry no" pattern="[A-Z0-9]{11}" data-aos="fade-up">
-                <label for="Contact"  data-aos="fade-up" data-aos-delay="100">Contact:</label>
-                <input type="text" id="Contact" pattern="[0-9]{10}" data-aos="fade-up">
-                <label for="Email"  data-aos="fade-up" data-aos-delay="100">Email:</label>
-                <input type="text" id="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" data-aos="fade-up">
-                <label for="Hostel"  data-aos="fade-up" data-aos-delay="100">Hostel:</label>
-                <input type="text" id="Hostel" data-aos="fade-up">
-                <p class="text" data-aos="fade-up">We won't send you spam. Unsubscribe at any time.</p>
+                <h2 class="subtitle">Subscribe today</h2>
+                <h1 class="title">Never miss an event!</h1>
+                <form>
+                <label for="Name">Name:</label>
+                <input type="text" id="Name">
+                <label for="Entry no">Entry no:</label>
+                <input type="text" id="Entry no" pattern="/20[0-9]{2}[A-Z0-9]{3}[0-9]{4}/gm">
+                <label for="Contact">Contact:</label>
+                <input type="text" id="Contact" pattern="[0-9]{10}">
+                <label for="Email">Email (gmail):</label>
+                <input type="text" id="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                <label for="Hostel">Hostel:</label>
+                <input type="text" id="Hostel">
+                <br>
                 <input type="Submit" value="Subscribe!" id="sub">
+            </form>
             </div>
         </div>
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        function myf(){
+            let s=document.getElementById('Entry no').value;
+            let year=s.slice(0,4);
+            if (year=='2020'){
+                open("https://groups.google.com/g/nss-test-1");
+            }
+            else if (year=='2021'){
+                open("https://groups.google.com/g/nss-test-2");
+            }
+        }
+    </script>
     <script>
         AOS.init();
       </script>
