--- a/Form.html
+++ b/Form.html
@@ -22,11 +22,11 @@
             <div class="content">
                 <h2 class="subtitle">Subscribe today</h2>
                 <h1 class="title">Never miss an event!</h1>
-                <form>
+                <form onsubmit="return myf();">
                 <label for="Name">Name:</label>
                 <input type="text" id="Name">
                 <label for="Entry no">Entry no:</label>
-                <input type="text" id="Entry no" pattern="/20[0-9]{2}[A-Z0-9]{3}[0-9]{4}/gm">
+                <input type="text" id="Entry no" pattern="20[0-9]{2}[A-Z0-9]{3}[0-9]{4}">
                 <label for="Contact">Contact:</label>
                 <input type="text" id="Contact" pattern="[0-9]{10}">
                 <label for="Email">Email (gmail):</label>
