--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
     <section class="wrapper">
         <div class="container">
-            <div class="img__container"  data-aos="fade-down">
+            <div class="img__container">
             <img src="http://nss.iitd.ac.in/images/nss.png" alt="nsslogo" class="img"> 
         </div>   
             <div class="content">
