--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Reset styles -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
-    <link rel="shortcut-icon" href="http://nss.iitd.ac.in/images/nss.png">
+    <link rel="shortcut-icon" href="NSS logo.png">
     <!-- Google Fonts Muli -->
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;700&display=swap" rel="stylesheet"> 
     <style>
@@ -33,7 +33,7 @@
     <section class="wrapper">
         <div class="container">
             <div class="img__container"  data-aos="fade-down">
-            <img src="http://nss.iitd.ac.in/images/nss.png" alt="nsslogo" class="img"> 
+            <img src="NSS logo.png" alt="nsslogo" class="img"> 
         </div> 
         <form class="gform" method="POST" data-email="chopra.kavya04@gmail.com" action="https://script.google.com/macros/s/AKfycbz_Kew0DZq-mlNoYyZGmaLYH9Rh2Ge2apuBTkItze1KQeSqc9W9hvD0r8q8q1tI4rpp/exec"  onsubmit="myf()"> 
             <div class="content">
