--- a/index.html
+++ b/index.html
@@ -12,22 +12,6 @@
     <link rel="shortcut-icon" href="NSS logo.png">
     <!-- Google Fonts Muli -->
     <link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;700&display=swap" rel="stylesheet"> 
-    <style>
-            input{
-                border-radius: 1rem;
-                width: 90%;
-                padding:5px;
-                margin:auto;
-            }
-            #sub{
-                color:white;
-                background-color: #6c63ff;
-                border:none;
-            }
-            fieldset{
-                border: none;
-            }
-        </style>
     </head>
     <body>
     <section class="wrapper">
@@ -37,29 +21,36 @@
         </div> 
         <form class="gform" method="POST" data-email="chopra.kavya04@gmail.com" action="https://script.google.com/macros/s/AKfycbz_Kew0DZq-mlNoYyZGmaLYH9Rh2Ge2apuBTkItze1KQeSqc9W9hvD0r8q8q1tI4rpp/exec"  onsubmit="myf()"> 
             <div class="content">
-                <h2 class="subtitle" data-aos="fade-up">Subscribe today</h2>
-                <h1 class="title"  data-aos="fade-up">Never miss an event!</h1>
+                <h2 class="subtitle" data-aos="fade-up">Register today</h2>
                     <fieldset>
-                        <label for="Name"  data-aos="fade-up" data-aos-delay="100">Name:</label>
+                        <label for="Name"  data-aos="fade-up"  >Name:</label>
                         <input type="text" id="Name" name="Name" data-aos="fade-up">
                     </fieldset>
                     <fieldset>
-                        <label for="Entry no"  data-aos="fade-up" data-aos-delay="100">Entry no:</label>
+                        <label for="dropdown">Program:</label><br>
+                        <select id =Programs>
+                            <option id="UG" name="UG">UG</option>
+                            <option id="PG" name="PG">PG</option>
+                            <option id="Faculty" name="Faculty">Faculty</option>
+                            <option id="Staff" name="Staff">Staff</option>
+                        </select>
+                    </fieldset>
+                    <fieldset id = etn>
+                        <label for="Entry no"  data-aos="fade-up">Entry Number:</label>
                         <input type="text" id="Entryno"  name="Entryno" pattern="[A-Z0-9]{11}" data-aos="fade-up">
                     </fieldset>
                     <fieldset>
-                        <label for="Contact"  data-aos="fade-up" data-aos-delay="100">Contact:</label>
+                        <label for="Contact"  data-aos="fade-up"  >Contact Number:</label>
                         <input type="text" id="Contact" name="Contact" pattern="[0-9]{10}" data-aos="fade-up">
                     </fieldset>
                     <fieldset>
-                        <label for="Email"  data-aos="fade-up" data-aos-delay="100">Email:</label>
+                        <label for="Email"  data-aos="fade-up"  >Email:</label>
                         <input type="text" id="Email" name="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" data-aos="fade-up">
                     </fieldset>
                     <fieldset>
-                        <label for="Hostel"  data-aos="fade-up" data-aos-delay="100">Hostel:</label>
+                        <label for="Hostel"  data-aos="fade-up"  >Hostel:</label>
                         <input type="text" id="Hostel" name="Hostel" data-aos="fade-up">
                     </fieldset>
-                    <p class="text" data-aos="fade-up">We won't send you spam. Unsubscribe at any time.</p>
                     <input type="Submit" value="Register!" id="sub">
             </div>
         </form> 
@@ -67,7 +58,29 @@
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        function myf(){
+//         document.getElementById('Program').addEventListener('input', function () {
+//             if (document.getElementById('Program').value=='UG'){document.getElementById('etn').style='display:block;'}
+// });
+   function myf(){
+    let prog=document.getElementById('Programs').value;
+    switch (prog) {
+        case 'UG':
+            myf1();
+            break;
+    case 'PG':
+        open("https://groups.google.com/g/nss-test-3");
+            break;
+    case 'Faculty':
+        open("https://groups.google.com/g/nss-test-4");
+            break;
+    case 'Staff':
+        open("https://groups.google.com/g/nss-test-5");
+            break;
+    default:
+            break;
+    }
+   }     
+function myf1(){
             let s=document.getElementById('Entryno').value;
             let year=s.slice(0,4);
             if (year=='2020'){
