--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
         function myf() {
             let prog = document.getElementById('Programs').value;
             switch (prog) {
-                case 'UG':
+                case 'Undergraduate':
                     myf1();
                     break;
-                case 'PG':
-                    open("https://groups.google.com/g/nss-test-3");
+                case 'Postgraduate':
+                    open("https://groups.google.com/u/3/g/nss_iitd_postgraduates");
                     break;
                 default:
-                    open("https://groups.google.com/g/nss-test-5");
+                    open("https://groups.google.com/u/3/g/nss_iitd_faculty_staff");
                     break;
             }
         }
@@ -103,19 +103,16 @@
             let s = document.getElementById('Entryno').value;
             let year = s.slice(0, 4);
             if (year == '2020') {
-                open("https://groups.google.com/g/nss-test-1");
+                open("https://groups.google.com/u/0/g/nss_iitd_2020/");
             }
             else if (year == '2021') {
-                open("https://groups.google.com/g/nss-test-2");
+                open("https://groups.google.com/u/3/g/nss_iitd_2021");
             }
             else if (year == '2022') {
-                open("https://groups.google.com/g/nss-test-2");
-            }
-            else if (year == '2018') {
-                open("https://groups.google.com/g/nss-test-2");
+                open("https://groups.google.com/u/3/g/nss_iitd_2022");
             }
             else if (year == '2019') {
-                open("https://groups.google.com/g/nss-test-2");
+                open("https://groups.google.com/u/3/g/nss_iitd_2019");
             }
         }
     </script>
