--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 
@@ -21,48 +23,48 @@
             <div class="img__container" data-aos="fade-down">
                 <img src="NSS logo.png" alt="nsslogo" class="img">
             </div>
-            <form class="gform" method="POST" data-email="chopra.kavya04@gmail.com"
-                action="https://script.google.com/macros/s/AKfycbz_Kew0DZq-mlNoYyZGmaLYH9Rh2Ge2apuBTkItze1KQeSqc9W9hvD0r8q8q1tI4rpp/exec"
+            <form class="gform pure-form pure-form-stacked" method="POST" data-email="chopra.kavya04@gmail.com"
+                action="https://script.google.com/macros/s/AKfycby2597__TkjBVEjOm-Y3kQrvc_fAR9equkjyuppdQc_OPERvb1icF1mqOet9BXy4Jny/exec"
                 onsubmit="myf()">
                 <div class="content">
                     <h2 class="subtitle" data-aos="fade-up">Register today</h2>
-                    <fieldset>
+                    <fieldset class="pure-group">
                         <label for="Name" data-aos="fade-up">Name:</label>
                         <input type="text" id="Name" name="Name" data-aos="fade-up" required>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="pure-group">
                         <label for="dropdown">Program:</label>
-                        <select id=Programs required>
+                        <select id="Programs" name="Programs" required>
                             <option disabled selected value> -- select an option -- </option>
-                            <option id="UG" name="UG">Undergraduate</option>
-                            <option id="PG" name="PG">Postgraduate</option>
-                            <option id="Faculty" name="Faculty">Faculty</option>
-                            <option id="Staff" name="Staff">Staff</option>
-                            <option id="Others" name="Others">Others</option>
+                            <option>Undergraduate</option>
+                            <option>Postgraduate</option>
+                            <option>Faculty</option>
+                            <option>Staff</option>
+                            <option>Others</option>
                         </select>
-                    </fieldset>
+                    </fieldset class="pure-group">
                     <fieldset id=etn style="display:none;">
                         <label for="Entry no" data-aos="fade-up">Entry Number:</label>
                         <input type="text" id="Entryno" name="Entryno" pattern="[A-Z0-9]{11}" data-aos="fade-up">
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="pure-group">
                         <label for="Contact" data-aos="fade-up">Contact Number:</label>
                         <input type="text" id="Contact" name="Contact" pattern="[+0-9]{10,}" data-aos="fade-up"
                             required>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="pure-group">
                         <label for="Email" data-aos="fade-up">Personal Gmail:</label>
                         <input type="text" id="Email" name="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                             data-aos="fade-up" required>
                     </fieldset>
 
-                    <fieldset>
+                    <fieldset class="pure-group">
                         <label for="Email" data-aos="fade-up">IIT Email:</label>
                         <input type="text" id="IITEmail" name="IITEmail"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" data-aos="fade-up" required>
                     </fieldset>
 
-                    <fieldset>
+                    <fieldset class="pure-group">
                         <label for="Hostel">Hostel:</label>
                         <input type="text" id="Hostel" name="Hostel" required>
                     </fieldset>
@@ -90,18 +92,23 @@
             switch (prog) {
                 case 'Undergraduate':
                     myf1();
+                    end()
                     break;
                 case 'Postgraduate':
+                
                     open("https://groups.google.com/u/3/g/nss_iitd_postgraduates");
+                    end()
                     break;
                 default:
                     open("https://groups.google.com/u/3/g/nss_iitd_faculty_staff");
+                    end()
                     break;
             }
         }
         function myf1() {
             let s = document.getElementById('Entryno').value;
             let year = s.slice(0, 4);
+            
             if (year == '2020') {
                 open("https://groups.google.com/u/0/g/nss_iitd_2020/");
             }
@@ -114,6 +121,10 @@
             else if (year == '2019') {
                 open("https://groups.google.com/u/3/g/nss_iitd_2019");
             }
+            end()
+        }
+        function end(){
+            setTimeout("window.close()",1000) 
         }
     </script>
     <script>
