--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 
@@ -120,6 +118,9 @@
             }
             else if (year == '2019') {
                 open("https://groups.google.com/u/3/g/nss_iitd_2019");
+            }
+            else{
+                open("https://groups.google.com/u/3/g/nss_iitd_2018/")
             }
             end()
         }
