--- a/header and footer/home.html
+++ b/header and footer/home.html
@@ -82,26 +82,26 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-  <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.min.css">
-  <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css">
+  <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css"> -->
 
 
   <!--  -->
-  <link rel='shortcut icon' type='image/x-icon' href='./images/favicon.ico' />
-  <base href="/">
-  <script src="./js/jquery.min.js"></script>
+  <!-- <link rel='shortcut icon' type='image/x-icon' href='./images/favicon.ico' />
+  <base href="/"> -->
+  <!-- <script src="./js/jquery.min.js"></script> -->
   <script type="text/javascript" src="https://unpkg.com/smoothscroll-polyfill@0.4.3/dist/smoothscroll.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="css/css/bootstrap.min.css"> -->
 </head>
 
 <body ng-app="app" ng-controller="MainCtrl">
-  <script type="text/javascript" src="./node_modules/mdbootstrap/js/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="./node_modules/mdbootstrap/js/jquery.min.js"></script>
   <script type="text/javascript" src="./node_modules/mdbootstrap/js/popper.min.js"></script>
   <script type="text/javascript" src="./node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="./node_modules/mdbootstrap/js/mdb.min.js"></script>
+  <script type="text/javascript" src="./node_modules/mdbootstrap/js/mdb.min.js"></script> -->
   <div class="loader-wrapper row center" ng-hide="loadingComp">
     <div class="loading mx-auto"></div>
   </div>
