--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
   <!-- form start -->
   <section class="wrapper" id="formSec">
-    <div class="container formDiv">
+    <div class="fcontainer formDiv">
       <div class="img__container" data-aos="fade-down">
         <img src="NSS logo.png" alt="nsslogo" class="img">
       </div>
