Added space in the regexp

--- a/index.html
+++ b/index.html
@@ -253,21 +253,21 @@
           </fieldset>
           <fieldset class="pure-group" id=etn style="display:none;">
             <label for="Entry no" data-aos="fade-up">Entry Number:</label><br>
-            <input type="text" id="Entryno" name="Entryno" pattern="[A-Z0-9]{11}" data-aos="fade-up">
+            <input type="text" id="Entryno" name="Entryno" pattern="[\s]{0,}[A-Z0-9]{11}[\s]{0,}" data-aos="fade-up">
           </fieldset>
           <fieldset class="pure-group">
             <label for="Contact" data-aos="fade-up">Contact Number:</label><br>
-            <input type="text" id="Contact" name="Contact" pattern="[+0-9]{10,}" data-aos="fade-up" required>
+            <input type="text" id="Contact" name="Contact" pattern="[\s]{0,}[+0-9]{10,}[\s]{0,}" data-aos="fade-up" required>
           </fieldset>
           <fieldset class="pure-group">
             <label for="Email" data-aos="fade-up">Personal Gmail Id:</label><br>
-            <input type="text" id="Email" name="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            <input type="text" id="Email" name="Email" pattern="[\s]{0,}[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}[\s]{0,}$"
               data-aos="fade-up" required>
           </fieldset>
 
           <fieldset class="pure-group" id="Webm">
             <label for="Email" data-aos="fade-up">Webmail:</label><br>
-            <input type="text" id="IITEmail" name="IITEmail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            <input type="text" id="IITEmail" name="IITEmail" pattern="[\s]{0,}[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}[\s]{0,}$"
               data-aos="fade-up" required>
           </fieldset>
 
