Added line before register button

--- a/index.html
+++ b/index.html
@@ -274,7 +274,9 @@
           <fieldset class="pure-group">
             <label for="Hostel" id="host">Hostel:</label><br>
             <input type="text" id="Hostel" name="Hostel" required>
-          </fieldset><input class="formSub" type="Submit" value="Register" id="sub">
+          </fieldset>
+          Kindly click on 'Ask to join group' on the page you get redirected to.<br>
+          <input class="formSub" type="Submit" value="Register" id="sub">
         </div>
       </form>
     </div>
