minor style changes 2

--- a/teamPage/index.html
+++ b/teamPage/index.html
@@ -239,6 +239,8 @@
         <div class="cards-7 section-gray">
             <div class="container">
                 <div class="row">
+                    <h1 class="heading">Faculty Co-ordinator</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -251,6 +253,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">Faculty Advisors</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -300,6 +304,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">Team Mentors</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -339,6 +345,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">General Secretaries</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -378,6 +386,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">Secretaries</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -495,6 +505,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">Technical Secretary</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -508,6 +520,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">Technical Executives</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -547,6 +561,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">Executives</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
@@ -846,6 +862,8 @@
                             </div>
                         </div>
                     </div>
+                    <h1 class="heading">PG Representatives</h1>
+                    <hr>
                     <div class="col-md-4">
                         <div class="card card-profile">
                             <div class="card-image">
