fixed design of vidya modal

--- a/domain_pages/education.html
+++ b/domain_pages/education.html
@@ -409,36 +409,41 @@
                         </div>
                     </div>
                 </div>
-                <div id="vidyaModal" class="modal">
+                <div id="vidyaModal" class="modal modal-fullscreen">
 
 
-                    <div class="modal-content modal-body card card-profile">
+                    <div class="modal-content modal-body card card-profile w-60">
                         <span id="vidyaclose" class="close">&times;</span>
-                        <div class="card-image">
-                            <img class="img" src="../images/vidya_logo.jpeg" style="object-fit: cover;">
+                        <div class="row">
+                            <div class="col-lg-4">
+                              <img src="../images/vidya_logo.jpeg"
+                                data-mdb-img="../images/vidya_logo.jpeg" alt="Lightbox image 1"
+                                class="w-100 h-100" />
+                            </div>
                         </div>
                         <div class="table">
-                            <h4 class="card-caption">Vidya</h4>
-                            <h5>Vision</h5>
-                            <h6 id="info" style="height: auto;" class="text-gray">Our prime focus at VIDYA is to teach students from classes 4th to 12th (and even some college students and adults) and inculcate the fundamental concepts of all subjects, especially Mathematics and Science. We make assignments, host fun activities and take regular assessment exams all the while holding regular teaching 5-6 days a week. Through our efforts, we have hosted several extra-curricular activities and conducted classes for the students with impeccable regularity. We wish to bring about a change in the lives of our students by empowering them through quality education and overall development.</h6>
-                            <h5>Description</h5>
-                            <h6 id="info" style="height: auto;" class="text-gray">VIDYA Teaching Project is a collaboration with VIDYA NGO where a team of dedicated volunteers takes regular classes, teaching students of classes 4-12 especially Science and Mathematics at Kendriya Vidyalaya School on the IIT Delhi Campus. Classes are held from 3-5 pm on weekdays for the students. We make assignments, host fun activities, and take regular assessment exams while holding regular teaching 6 days a week. </h6></div>
-                        <div class="lightbox" id="lightbox">
+                            <h1 class="card-caption">VIDYA TEACHING PROJECT</h1>
+                            <h2>VISION</h2>
+                            <p>Our prime focus at VIDYA is to teach students from classes 4th to 12th (and even some college students and adults) and inculcate the fundamental concepts of all subjects, especially Mathematics and Science. We make assignments, host fun activities and take regular assessment exams all the while holding regular teaching 5-6 days a week. Through our efforts, we have hosted several extra-curricular activities and conducted classes for the students with impeccable regularity. We wish to bring about a change in the lives of our students by empowering them through quality education and overall development.</p>
+                            <h2>DESCRIPTION</h2>
+                            <p>VIDYA Teaching Project is a collaboration with VIDYA NGO where a team of dedicated volunteers takes regular classes, teaching students of classes 4-12 especially Science and Mathematics at Kendriya Vidyalaya School on the IIT Delhi Campus. Classes are held from 3-5 pm on weekdays for the students. We make assignments, host fun activities, and take regular assessment exams while holding regular teaching 6 days a week. </p>
+                        </div>
+                        <div class="lightbox h-25" id="lightbox">
                             <div class="row">
                               <div class="col-lg-4">
                                 <img src="../images/vidya1.png"
                                   data-mdb-img="../images/vidya1.png" alt="Lightbox image 1"
-                                  class="w-100" />
+                                  class="w-100 h-100" />
                               </div>
                               <div class="col-lg-4">
                                 <img src="../images/vidya2.png"
                                   data-mdb-img="../images/vidya2.png" alt="Lightbox image 2"
-                                  class="w-100" />
+                                  class="w-100 h-100" />
                               </div>
                               <div class="col-lg-4">
                                 <img src="../images/vidya3.png"
                                   data-mdb-img="../images/vidya3.png" alt="Lightbox image 3"
-                                  class="w-100" />
+                                  class="w-100 h-100" />
                               </div>
                               
                             </div>
@@ -578,37 +583,6 @@
 
                 </div>
             </div>
-            <div id="vidyaModal" class="modal">
-                <span id="vidyaclose" class="close">&times;</span>
-
-                <div class="modal-content modal-body card card-profile">
-                    <div class="card-image">
-                        <img class="img" src="images/vidya.jpg">
-                    </div>
-                    <div class="table">
-                        <h4 class="card-caption">vidya Aggarwal</h4>
-                        <h5 class="category text-gray">Team Mentor</h5>
-                        <h6 id="info" style="height: auto;" class="text-gray">Obnoxious and
-                            extravagant. Oh and
-                            I'm also a pathological liar and borderline delusional so believe me
-                            when i say that
-                            I'm very hot :). Wanna talk about Pop music and Taylor Swift, Gimme a
-                            call at any
-                            time of the day. Still haven't grown out of my teen fiction years, so
-                            Percy Jackson
-                            <3. I love to gossip and hangout too, that's my day job. Also I'm in campus for a year, so
-                                let's have fun 🙈</h6>
-                                <div class="ftr">
-                                    <a href="vidyaaggarwal99@gmail.com" class="btn btn-just-icon btn-google btn-round">
-                                        <i class="fa fa-envelope"></i>
-                                    </a>
-                                </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
         <script>
             var modal = document.getElementById("myModal");
             var btn = document.getElementById("myBtn");
